--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
    "devDependencies": {
+      "@types/cors": "^2.8.17",
       "@types/express": "^4.17.21",
       "@types/node": "^16.11.10",
       "nodemon": "^3.1.4",
@@ -11,6 +12,7 @@
       "typescript": "4.5.2"
    },
    "dependencies": {
+      "cors": "^2.8.5",
       "dotenv": "^16.4.5",
       "express": "^4.21.0",
       "express-async-errors": "^3.1.1",
